# spotify-reshuffle

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
