[package]
name = "spotify-reshuffle"
version = "0.1.0"
edition = "2021"

[dependencies]
rspotify = { version = "0.15.1", features = ["client-reqwest", "reqwest-rustls-tls", "cli"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.9.2"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "reshuffle"
path = "src/main.rs"
